SERVER-12760 Handle sharded agg explain better during upgrade